Made Folder System and redesigned edit popup